--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\RGUKT\Documents\web development\personal site\images\Aravind.png.png" alt="Aravind"></td>
+      <td><img src="\Aravind.png.png" alt="Aravind"></td>
       <td><h1>i am Aravind</h1>
       <p><em>i am <strong>a student</strong></em></p></td>
     </tr>
@@ -23,8 +23,8 @@
     <li>java</li>
     <hr>
   </ul>
-  <li><a href="C:\Users\RGUKT\Documents\web development\personal site\hobbies.html">my hobbies</a></li>
-  <li><a href="C:\Users\RGUKT\Documents\web development\personal site\contacts.html">my contacts</a></li>
+  <li><a href="\hobbies.html">my hobbies</a></li>
+  <li><a href="\contacts.html">my contacts</a></li>
   <hr>
   <h3>internship experience</h3>
   <table border="1">
