--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="\Aravind.png.png" alt="Aravind"></td>
+      <td><img src="images\Aravind.png.png" alt="Aravind"></td>
       <td><h1>i am Aravind</h1>
       <p><em>i am <strong>a student</strong></em></p></td>
     </tr>
